--- a/public/graduados.html
+++ b/public/graduados.html
@@ -11,7 +11,7 @@
     <main>
         <div class="contenedor">
             <div class="con">
-                <h1> Estudiantes</h1>
+                <h1> Graduados</h1>
                 <div class="container"> 
                 </div>
                     <div class="list">
