--- a/public/Galeria.html
+++ b/public/Galeria.html
@@ -27,7 +27,7 @@
             </div>
           </div>
         </nav>
-        <center><a href="Paginaprincipal.html"><button onclick=""><h3>Salir</h3></button></a></center>
+        <center><a href="index.html"><button onclick=""><h3>Salir</h3></button></a></center>
         </nav>
         </div><br><br><br>
           <script src="g.js"></script>
