--- a/public/Inicio.html
+++ b/public/Inicio.html
@@ -12,7 +12,7 @@
                 <img src="logouleam.png">
             </div>
             <nav>
-                <a href="Paginaprincipal.html"><button onclick=""><h3>Regresar</h3></button></a>
+                <a href="index.html"><button onclick=""><h3>Regresar</h3></button></a>
             </nav>
         </header>
         <div class="cuerpo">
