--- a/public/MenuA.html
+++ b/public/MenuA.html
@@ -11,7 +11,7 @@
                 <img src="logouleam.png">
             </div>
             <nav>
-                <a href="Paginaprincipal.html"><button onclick=""><h3>Salir</h3></button></a>
+                <a href="index.html"><button onclick=""><h3>Salir</h3></button></a>
                 
             </nav>
         </header>
