--- a/public/Perfiles.html
+++ b/public/Perfiles.html
@@ -44,7 +44,7 @@
             </div></center> 
             </div> 
         </nav>
-        <a href="Paginaprincipal.html"><button onclick=""><h3>Salir</h3></button></a>
+        <a href="index.html"><button onclick=""><h3>Salir</h3></button></a>
         </nav>
         </div><br><br><br><br><br><br>
         <footer>
