--- a/public/Promociones.html
+++ b/public/Promociones.html
@@ -51,7 +51,7 @@
                   <script src="g.js"></script>
                 </div>
             </nav>
-            <center><a href="Paginaprincipal.html"><button onclick=""><h3>Salir</h3></button></a></center>
+            <center><a href="index.html"><button onclick=""><h3>Salir</h3></button></a></center>
             </nav>
             </div><br><br><br>
         <footer>
