--- a/public/Inicio.html
+++ b/public/Inicio.html
@@ -16,7 +16,7 @@
             </nav>
         </header>
         <div class="cuerpo">
-                <form onsubmit="Login()" class="formulario" id="formulario-login">
+                <form action="MenuA.html" class="formulario" id="formulario-login">
                     <center>
                         <h2>Inicio de Sesión</h2>
                     </center>
@@ -28,14 +28,11 @@
                             <div class="input-contenedor">
                             <i class="fas fa-key icon"></i>
                             <input type="password" id="password" name="password" placeholder="Ingrese su contraseña"></div> 
-                        <center><input type="button" value="Iniciar sesión" class="button" id="boton" onclick="Login()"></a></center>
-                        <b><p><a class="linkmenu" href="MenuA.html" style="color:rgba(100, 100, 100, 0.822); text-decoration: none;"> ----</a></p></b>
-                    <hr>
-                        <hr>
-                        <b><p>¿Aún no tienes Cuenta?<a class="link" href="Registro.html"> Registrate</a></p></b>
-              
+                        <center><input type="submit"  value="Iniciar sesión" class="button"></center>
+                        <!--<b><p><a class="linkmenu" href="MenuA.html" style="color:rgba(100, 100, 100, 0.822); text-decoration: none; te"> ----</a></p></b>-->                       
                     </div>
                 </form>
+                <b><p>¿Aún no tienes Cuenta?<a style="color:rgba(81, 238, 24, 0.822);" class="link" href="Registro.html"> Registrate</a></p></b>
             </body>
             <br><br><br><br>
         <footer>
