--- a/public/Inicio.html
+++ b/public/Inicio.html
@@ -23,11 +23,11 @@
                     <div class="contenedor">
                         <div class="input-contenedor">
                             <i class="fas fa-envelope icon"></i>
-                            <input type="text" id="correo" name="correo" placeholder="Ingrese su correo electrónico">
+                            <input type="text" id="correo" name="correo" placeholder="Ingrese su correo electrónico" required>
                         </div>
                             <div class="input-contenedor">
                             <i class="fas fa-key icon"></i>
-                            <input type="password" id="password" name="password" placeholder="Ingrese su contraseña"></div> 
+                            <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" required></div> 
                         <center><input type="submit"  value="Iniciar sesión" class="button"></center>                       
                     </div>
                 </form>
